syntax = "proto3";

option go_package = "./resume";

package resume;

message ResumeCreated{
    string resumeId = 1;
    string userName = 2;
    string password = 3;
}

message ResumeCreatedResponse{
    string message = 1;
}

service ResumeService{
    rpc SendResume(ResumeCreated) returns (ResumeCreatedResponse) {}
}

message SignIn {
    string login = 1;
    string password = 2;
}